--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://BoBroccoli.github.io/portfolio-master",
+  "homepage": "https://BoBroccoli.github.io/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
